--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,5 @@ sodapy>=2.2.0,<3.0.0
 pandas>=2.2.3,<3.0.0
 boto3>=1.34.0,<2.0.0
 datacommons>=1.4.3,<2.0.0
+tqdm>=4.66.5,<5.0.0
+psutil>=5.0.0,<6.0.0
